
syntax = "proto3";

option go_package = "github.com/omnibuildplatform/omni-repository/app";

package app;

// The greeting service definition.
service RepoServer {
  // Sends a greeting
  rpc CallLoadFrom (RepRequest) returns (RepResponse) {}
}

// The request message containing the user's name.
message RepRequest {
  string name = 1;
  string url = 2;
  int32  user_id = 3;
  string user_name = 4; 
}

// The response message containing the greetings
message RepResponse {
  int32  status = 1;
  string message = 2;

}